--- a/.github/workflows/main_Zinc-Coworker.yml
+++ b/.github/workflows/main_Zinc-Coworker.yml
@@ -5,47 +5,40 @@ name: Build and deploy container app to Azure Web App - Zinc-Coworker
 
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch:
+    branches: [ "main" ]
 
 jobs:
-  build:
-    runs-on: 'ubuntu-latest'
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Log in to registry
-      uses: docker/login-action@v2
-      with:
-        registry: https://sampleappaoaichatgpt.azurecr.io/
-        username: ${{ secrets.AzureAppService_ContainerUsername_22ba295738ff4c76aa6c4bc69f59efb4 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_c073497e5acd4f93bbecfefc3ddb0d8e }}
-
-    - name: Build and push container image to registry
-      uses: docker/build-push-action@v3
-      with:
-        push: true
-        tags: sampleappaoaichatgpt.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_22ba295738ff4c76aa6c4bc69f59efb4 }}/sample-app-aoai-chatgpt:${{ github.sha }}
-        file: ./Dockerfile
-
-  deploy:
+  main_Zinc-Coworker:
     runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    env:
+      # Docker image details
+      IMAGE_NAME: sample-app-aoai-chatgpt
+      IMAGE_TAG: ${{ github.sha }}
+      AZURE_WEBAPP_NAME: Zinc-Coworker
 
     steps:
-    - name: Deploy to Azure Web App
-      id: deploy-to-webapp
-      uses: azure/webapps-deploy@v2
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Log in to Azure Container Registry
+      uses: docker/login-action@v3
       with:
-        app-name: 'Zinc-Coworker'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_83af0095004946a5b1ace76f482d9736 }}
-        images: 'sampleappaoaichatgpt.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_22ba295738ff4c76aa6c4bc69f59efb4 }}/sample-app-aoai-chatgpt:${{ github.sha }}'
+        registry: ${{ secrets.ACR_LOGIN_SERVER }}
+        username: ${{ secrets.ACR_USERNAME }}
+        password: ${{ secrets.ACR_PASSWORD }}
+
+    - name: Build & push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: |
+          ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+
+    - name: Deploy to Azure Web App (container)
+      uses: azure/webapps-deploy@v3
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        images:   ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_83AF00950A946A5B1ACE76F482D09736 }}
