--- a/.github/workflows/main_Zinc-Coworker.yml
+++ b/.github/workflows/main_Zinc-Coworker.yml
@@ -8,40 +8,35 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
+env:
+  AZURE_WEBAPP_NAME: Zinc-Coworker
+  IMAGE_NAME: sample-app-aoai-chatgpt
+  IMAGE_TAG: ${{ github.sha }}
+
 jobs:
   main_Zinc-Coworker:
     runs-on: ubuntu-latest
 
-    env:
-      # Docker image details
-      IMAGE_NAME: sample-app-aoai-chatgpt
-      IMAGE_TAG: ${{ github.sha }}
-      AZURE_WEBAPP_NAME: Zinc-Coworker
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Log in to Azure Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ${{ secrets.ACR_LOGIN_SERVER }}
-        username: ${{ secrets.ACR_USERNAME }}
-        password: ${{ secrets.ACR_PASSWORD }}
+      - name: Log in to Azure Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ secrets.ACR_LOGIN_SERVER }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
 
-    - name: Build & push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: |
-          ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
-    - name: Deploy to Azure Web App (container)
-      uses: azure/webapps-deploy@v3
-      with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        images:   ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_83AF00950A946A5B1ACE76F482D09736 }}
-
-        Add GitHub Actions workflow for Zinc-Coworker deployment
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          images: ${{ secrets.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
